--- a/src/main/resources/templates/orders/details.html
+++ b/src/main/resources/templates/orders/details.html
@@ -11,7 +11,8 @@
     <p><strong>Mã đơn hàng:</strong> <span th:text="${order.orderID}"></span></p>
     <p><strong>Khách hàng:</strong> <span th:text="${order.user.fullName}"></span></p>
     <p><strong>Ngày đặt:</strong> <span th:text="${#dates.format(order.orderDate, 'dd-MM-yyyy')}"></span></p>
-    <p><strong>Tổng tiền:</strong> <span th:text="${#numbers.formatDecimal(order.totalAmount, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></span></p>
+    <p><strong>Tổng tiền:</strong> <span
+            th:text="${#numbers.formatDecimal(order.totalAmount, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></span></p>
     <p><strong>Trạng thái:</strong> <span th:text="${order.getStatusDescription()}"></span></p>
 
     <form method="post" th:action="@{/orders/update-status}" class="mb-4">
