--- a/src/main/resources/templates/orders/list.html
+++ b/src/main/resources/templates/orders/list.html
@@ -5,34 +5,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h1>Order List</h1>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Order ID</th>
-                    <th>User Name</th>
-                    <th>Order Date</th>
-                    <th>Total Amount</th>
-                    <th>Status</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="order : ${orders}">
-                    <td th:text="${order.orderID}"></td>
-                    <td th:text="${order.user.fullName}"></td> <td th:text="${#dates.format(order.orderDate, 'dd-MM-yyyy')}"></td>
-                    <td th:text="${#numbers.formatDecimal(order.totalAmount, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></td>
-                    <td th:text="${order.statusDescription}"></td>
-                    <td>
-                        <a th:href="@{/orders/{id}(id=${order.orderID})}" class="btn btn-success btn-sm">Xem chi tiết</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <a th:href="@{/admin/dashboard}" class="btn btn-outline-secondary">← Quay lại trang chủ</a>
-    </div>
+<div class="container">
+    <h1>Order List</h1>
+    <a th:href="@{/admin/dashboard}" class="btn btn-outline-secondary">← Quay lại trang Admin</a>
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th>Order ID</th>
+            <th>User Name</th>
+            <th>Order Date</th>
+            <th>Total Amount</th>
+            <th>Status</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="order : ${orders}">
+            <td th:text="${order.orderID}"></td>
+            <td th:text="${order.user.fullName}"></td>
+            <td th:text="${#dates.format(order.orderDate, 'dd-MM-yyyy')}"></td>
+            <td th:text="${#numbers.formatDecimal(order.totalAmount, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></td>
+            <td th:text="${order.statusDescription}"></td>
+            <td>
+                <a th:href="@{/orders/{id}(id=${order.orderID})}" class="btn btn-success btn-sm">Xem chi tiết</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
