--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Report</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Custom CSS -->
@@ -13,29 +14,36 @@
             background-color: #f8f9fa; /* Light gray background */
             font-family: 'Arial', sans-serif;
         }
+
         h1 {
             margin-top: 50px; /* Add space at the top */
             font-weight: bold;
         }
+
         .table-container {
             max-width: 800px; /* Limit table width for better readability */
             margin: 0 auto; /* Center the table */
             margin-top: 30px;
         }
+
         .table {
             border-radius: 8px; /* Rounded corners for the table */
             overflow: hidden; /* Ensure rounded corners are visible */
         }
+
         .table th, .table td {
             vertical-align: middle; /* Align text vertically in the middle */
         }
+
         .table thead {
             background-color: rgb(0, 0, 0); /* Bootstrap primary blue */
             color: white; /* White text for contrast */
         }
+
         .table tbody tr:hover {
             background-color: #e9ecef; /* Light gray hover effect */
         }
+
         .footer {
             text-align: center;
             margin-top: 50px;
@@ -47,7 +55,10 @@
 </head>
 <body>
 <div class="container">
-    <a class="btn btn-primary mt-2" th:href="@{/index}">Trang Chủ</a>
+<!--    <a class="btn btn-primary mt-2" th:href="@{/index}">Trang Chủ</a>-->
+    <a th:href="@{/admin/dashboard}" class="btn btn-outline-secondary">
+        <i class="bi bi-arrow-left-circle"></i> Quay lại trang Admin
+    </a>
     <h1 class="text-center mb-5 mt-5">Tồn kho theo loại hàng</h1>
     <div class="table-container">
         <table class="table table-bordered table-hover">
