--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -9,27 +9,29 @@
 <div class="container">
     <h1>Sửa thông tin người dùng</h1>
     <form th:action="@{/users/update}" th:object="${user}" method="post">
-        <input type="hidden" th:field="*{userId}" /> <div class="mb-3">
+        <input type="hidden" th:field="*{userId}"/>
+        <div class="mb-3">
             <label for="username" class="form-label">Tên đăng nhập:</label>
-            <input type="text" class="form-control" id="username" th:field="*{userName}" required> </div>
+            <input type="text" class="form-control" id="username" th:field="*{userName}" required></div>
         <div class="mb-3">
             <label for="password" class="form-label">Mật khẩu:</label>
-            <input type="text" class="form-control" id="password" th:field="*{password}" required> </div>
+            <input type="text" class="form-control" id="password" th:field="*{password}" required></div>
         <div class="mb-3">
             <label for="fullname" class="form-label">Họ và tên:</label>
-            <input type="text" class="form-control" id="fullname" th:field="*{fullName}"> </div>
+            <input type="text" class="form-control" id="fullname" th:field="*{fullName}"></div>
         <div class="mb-3">
             <label for="email" class="form-label">Email:</label>
-            <input type="email" class="form-control" id="email" th:field="*{email}"> </div>
+            <input type="email" class="form-control" id="email" th:field="*{email}"></div>
         <div class="mb-3">
             <label for="phone" class="form-label">Số điện thoại:</label>
-            <input type="text" class="form-control" id="phone" th:field="*{phone}"> </div>
+            <input type="text" class="form-control" id="phone" th:field="*{phone}"></div>
         <div class="mb-3">
             <label for="address" class="form-label">Địa chỉ:</label>
-            <input type="text" class="form-control" id="address" th:field="*{address}"> </div>
+            <input type="text" class="form-control" id="address" th:field="*{address}"></div>
         <div class="mb-3">
             <label for="role" class="form-label">Vai trò:</label>
-            <select class="form-control" id="role" th:field="*{roleID}"> <option value="1">Admin</option>
+            <select class="form-control" id="role" th:field="*{roleID}">
+                <option value="1">Admin</option>
                 <option value="2">User</option>
             </select>
         </div>
